# LOOM

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.claude/: gap-analysis-phases-1-11.md  launch.json  settings.local.json
.claude/commands/: phase-start.md  phase-verify.md
.claude/rules/: code-standards.md  pitfalls-and-reference.md
.serena/: project.yml
Implementation Plan/: loom-implementation-plan.md
PRDs/: 00-Index.md  01-App-Lifecycle-and-Routing.md  02-Design-System.md  03-Empty-States-and-Edge-Case-UI.md  04-Reader-View-and-Export.md  05-Settings-Modal.md  06-Telemetry-and-Rate-Limiting.md  07-Onboarding-and-First-Launch.md  08-Vault-and-World-Management.md  09-Conversation-and-Message-System.md  10-Control-Pane.md  11-App-Lifecycle-and-State-Management.md  12-Source-Document-Viewer-and-Editor.md  13-Keyboard-Shortcuts-and-Accessibility.md  14-Error-Handling-and-Logging.md  15-Build-and-Release.md  16-Ghostwriter.md  17-Branch-Map.md  18-Accordion.md  19-Media-System-Image-Uploads.md  20-Media-System-Image-Generation.md  21-Media-System-Audio-TTS.md  PATCH-09-Conversation-and-Message-System.md  PATCH-12-Source-Document-Viewer-and-Editor.md  PATCH-16-Ghostwriter.md  PATCH-18-Accordion.md  PATCH-19-Media-System-Image-Uploads.md  PRD-PATCH-CHANGELOG.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: branch.rs  config.rs  crypto.rs  db.rs  error.rs  gemini.rs  lib.rs  messages.rs  rate_limiter.rs  state.rs  vault.rs  world.rs
src/components/: ErrorBoundary.tsx
(+57 files in other folders)
