[package]
name = "loom"
version = "0.1.0"
description = "Private AI writing companion"
authors = ["Adrian"]
edition = "2021"

[lib]
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
hex = "0.4"
zeroize = "1"
dirs = "5"
futures-util = "0.3"
